24/9/12
  Fix for existing window/s not being unmapped in
    fullscreen mode when new window added
    Bar is toggled on a per desktop basis

22/9/12
  Added AltSuper for Mod key combo

21/9/12
  In stacking mode have border on first opened window

20/9/12
  Allow moving transient window
  Be a bit friendlier with transient windows
  Add RESIZEMOVEKEy to rc.conf

19/9/12
  Added background colour changing for the bar

21/8/12
  pre increment/decrement not post
  Added -ffast-math -fno-unit-at-a-time to Makefile

15/8/12
  Changed rc.conf to be colon seperated
  can set the number of desktops in the rc.conf file, defaults to four
  can set whether current window name in bar is left aligned

14/8/12
    Moved keyboard shortcuts and apps settings to files in
      ~/.config/snapwm/key.conf and apps.conf.

10/8/12
  Can now add/remove windows to/from the master area
    with keyboard shortcuts

8/8/12
  Fixed Kill client and quit
  the order windows are focused in is remembered -
      makes a difference in stacking mode !

5/8/12
  Change the grid mode for up to 5 rows and columns with the option to resize the
  first column and the second window.

6/7/12
  Fix for transient window mapping order

5/7/12
  Remove transient windows that flash up on one desktop then show on another from the desktop

2/7/12
  Just map the desktop switcher and bar windows
  Click on the bar to change to previous desktop

28/6/12
  Changed the desktop switcher to have buttons the width of the
   desktop name instead of a uniform size

25/6/12
  Send mouse clicks through to window when focusing

23/6/12
  Use XFetchName for root window name in bar

19/6/12
  Defined the RC FILE as $HOME/.config/snapwm/rc.conf
  Changed the config.h.def to be generic not as I use config.h

6/6/12
  Changed number of SHOWNUMOPEN from number+colon to a meter at the bottom of the switcher

4/6/12
  Added 'double buffer' for text in the bar

30/5/12
  Added support for multibyte fonts