@@ -1,5 +1,5 @@
 CFLAGS+= -g -std=c99 -pedantic -Wall
-LDADD+= -lX11
+LDADD+= -lX11 -lXinerama
 LDFLAGS=
 EXEC=snapwm
 
