@@ -1,7 +1,10 @@
+10/10/12
+  Added multi monitor support
+
 24/9/12
   Fix for existing window/s not being unmapped in
     fullscreen mode when new window added
-    Bar is toggled on a per desktop basis
+  Bar is toggled on a per desktop basis
 
 22/9/12
   Added AltSuper for Mod key combo
